ajout de paramètres pour l'ajustement dynamique de la détection du but

--- a/RhobanServer/MotionServer/RhobanServerConfig.yml
+++ b/RhobanServer/MotionServer/RhobanServerConfig.yml
@@ -1,4 +1,7 @@
 server:
      mode : fake
      port : 7777
+     stm_server_path : 'C:\Users\Hugo\Documents\Rhoban\Edu\sdk\python\stm\stm_server_main.py'
+     python_cmd : 'python'
+     command_store : 'C:\Users\Hugo\Documents\Rhoban\Boards\Rhoban.Communication\commands.xml'
 
