--- a/RhobanServer/Robocup/RhobanServerConfig.yml
+++ b/RhobanServer/Robocup/RhobanServerConfig.yml
@@ -1,6 +1,7 @@
 server:
      mode : fake
      port : 7777
-     stm_server_path : 'C:\Users\Hugo\Documents\GitHub\Edu\sdk\python\stm\stm_server_main.py'
-     command_store : 'C:\Users\Hugo\Documents\GitHub\Boards\Rhoban.Communication\commands.xml'
+     stm_server_path : 'C:\Users\Hugo\Documents\Rhoban\Edu\sdk\python\stm\stm_server_main.py'
+     python_cmd : 'python3'
+     command_store : 'C:\Users\Hugo\Documents\Rhoban\Boards\Rhoban.Communication\commands.xml'
 
