added stm moves to environment SigmabanRobocup

--- a/RhobanServer/Robocup/RhobanServerConfig.yml
+++ b/RhobanServer/Robocup/RhobanServerConfig.yml
@@ -2,6 +2,6 @@ server:
      mode : fake
      port : 7777
      stm_server_path : 'C:\Users\Hugo\Documents\Rhoban\Edu\sdk\python\stm\stm_server_main.py'
-     python_cmd : 'python3'
+     python_cmd : 'C:\Python32\python3.exe'
      command_store : 'C:\Users\Hugo\Documents\Rhoban\Boards\Rhoban.Communication\commands.xml'
 
