updated robocup parameters

--- a/RhobanServer/Robocup/StmServerConfig.yml
+++ b/RhobanServer/Robocup/StmServerConfig.yml
@@ -1,5 +1,5 @@
 stm:
      server : localhost
      port : 7777
-     command_store : 'C:\Users\Hugo\Documents\Rhoban\Boards\Rhoban.Communication\commands.xml'
+     command_store : '../../../Boards/Rhoban.Communication/commands.xml'
 
