Adding names to robots

--- a/RhobanServer/RobocupV2013-2/RhobanServerConfig.yml
+++ b/RhobanServer/RobocupV2013-2/RhobanServerConfig.yml
@@ -1,3 +1,6 @@
+robot:
+    name: Moogly
+
 server:
     stm_server_path: /home/rhoban/Edu/sdk/python/stm/stm_server_main.py
     command_store: /home/rhoban/Edu/sdk/common/commands.xml
