--- a/RhobanServer/Django/StmServerConfig.yml
+++ b/RhobanServer/Django/StmServerConfig.yml
@@ -1,5 +1,5 @@
 stm:
      server : localhost
      port : 7777
-     command_store : '../../Edu/sdk/common/commands.xml'
+     command_store : '../../../Edu/sdk/common/commands.xml'
 
