--- a/RhobanServer/visionReloaded.conf
+++ b/RhobanServer/visionReloaded.conf
@@ -9,16 +9,16 @@ ball.border_min_val: 50
 ball.max_hop: 10
 ball.cluster_threshold: 1.0
 ball.score_threshold: 0.05
-clipping.dispersion_hue: 4
+clipping.dispersion_hue: 6
 clipping.dispersion_sat: 120
 clipping.dispersion_val: 60
-clipping.max_hue: 32
+clipping.max_hue: 35
 clipping.max_sat: 255
 clipping.max_val: 255
-clipping.min_hue: 18
+clipping.min_hue: 16
 clipping.min_sat: 120
 clipping.min_val: 100
-clipping.morph_iteration: 10
+clipping.morph_iteration: 3
 clipping.morph_size: 3
 clipping.precision_hue: 1
 clipping.precision_sat: 1
@@ -29,6 +29,7 @@ goal.min_bins_number: 3
 goal.min_hue: 50
 goal.min_sat: 40
 goal.min_val: 150
+goal.black_min_val: 100
 source.backlight_compensation: 0
 source.brightness: 128
 source.contrast: 128
