--- a/RhobanServer/Chewbacca/Kick.yml
+++ b/RhobanServer/Chewbacca/Kick.yml
@@ -2,7 +2,13 @@ sensor_pitch_zero: 1.80
 sensor_roll_zero: -4.5
 
 right:
-  y_pos: -0.035
+  y_pos: -0.040
+  leg_space: 0.015
+  torso_roll_gain: -0.1 
+  com_y_tgt: 0.0
 
 left:
   y_pos: 0.035
+  leg_space: 0.015
+  torso_roll_gain: -0.1
+  com_y_tgt: 0.0
