--- a/RhobanServer/Chewbacca/Kick.yml
+++ b/RhobanServer/Chewbacca/Kick.yml
@@ -1,14 +1,25 @@
 sensor_pitch_zero: 1.80
-sensor_roll_zero: -4.5
+sensor_roll_zero: -3.0
 
 right:
-  y_pos: -0.040
+  y_pos: -0.030
   leg_space: 0.015
   torso_roll_gain: -0.1 
-  com_y_tgt: 0.0
+  com_y_tgt: -0.005
+  x_pos: -0.015
+  leg_space: 0.015
+  bassin_x: 0.0  
+  stab_time: 1.5
+  gain_pitch_asserv: 0.02 
+  shoot_delta_z: 0.020
 
 left:
   y_pos: 0.035
   leg_space: 0.015
   torso_roll_gain: -0.1
   com_y_tgt: 0.0
+  x_pos: -0.020
+  bassin_x: 0.0
+  stab_time: 2.0
+  gain_pitch_asserv: 0.01
+  shoot_delta_z: 0.020
