--- a/newFake/goals.conf
+++ b/newFake/goals.conf
@@ -1,4 +1,8 @@
+whiteGoalDetection
+whiteGoalNearField
 fieldColorLarge
+fieldColorDilated
+fieldColorOpeningGoal
 clippingBorders
 clippingBordersSliced
 linesROI
@@ -9,7 +13,6 @@ clippingExperimentalBorders
 goalMask2
 goalMask
 goalByROI
-
 srcDownscaled
 clipping
 undistort
