Updating list of clipping related filters + ignoring Logs + Using lower resolution for linesByROI + LUTBasedPipeline for Benchmark

--- a/newFake/clipping.conf
+++ b/newFake/clipping.conf
@@ -1,12 +1,13 @@
 whiteDetection
 whiteDetectionClosing
 fieldColor
+fieldColorLarge
 fieldColorOpening
 clippingByBlob
 clippingByBlobDownscaled
 clippingByBlobFinal
 clipping
-
+linesByROI
 RGB
 histogram
 srcDownscaled
