--- a/mowgly/rhio/moves/approach/values.conf
+++ b/mowgly/rhio/moves/approach/values.conf
@@ -1,7 +1,9 @@
-[bool] forceLocalize.value = 1
+[bool] forceLocalize.value = 0
 [bool] forceLocalize.comment = 
-[bool] staticShoot.value = 0
-[bool] staticShoot.comment = 
+[bool] idiot.value = 0
+[bool] idiot.comment = Attack with only the magnetometer
+[bool] penalty.value = 0
+[bool] penalty.comment = Attack with only the magnetometer
 [float] applyKickAngle.value = 45
 [float] applyKickAngle.comment = 
 [float] applyKickDistMax.value = 80
@@ -20,15 +22,17 @@
 [float] forceLocalizeDuration.comment = 
 [float] forceLocalizeInterval.value = 25
 [float] forceLocalizeInterval.comment = 
-[float] goalQDisableThreshold.value = 0.3
+[float] goalQDisableThreshold.value = 0.4
 [float] goalQDisableThreshold.comment = 
-[float] goalQEnableThreshold.value = 0.7
+[float] goalQEnableThreshold.value = 0.9
 [float] goalQEnableThreshold.comment = 
+[float] lateralKickTreshold.value = 50
+[float] lateralKickTreshold.comment = Choose the range where we will do lateral kick
 [float] maxLateral.value = 20
 [float] maxLateral.comment = 
 [float] maxRotation.value = 20
 [float] maxRotation.comment = 
-[float] maxStep.value = 60
+[float] maxStep.value = 35
 [float] maxStep.comment = 
 [float] maxStepBackward.value = 20
 [float] maxStepBackward.comment = 
@@ -48,11 +52,11 @@
 [float] stepP.comment = 
 [float] targetX.value = 8
 [float] targetX.comment = 
-[float] targetY.value = 2
+[float] targetY.value = 15
 [float] targetY.comment = 
 [float] teamRadius.value = 200
 [float] teamRadius.comment = 
-[float] xRange.value = 7
+[float] xRange.value = 6
 [float] xRange.comment = 
-[float] yRange.value = 7
+[float] yRange.value = 6
 [float] yRange.comment = 
