--- a/django/rhio/moves/walkDev/values.conf
+++ b/django/rhio/moves/walkDev/values.conf
@@ -16,10 +16,6 @@
 [float] freq.comment = Walk frequency
 [float] lateralTrim.value = 0
 [float] lateralTrim.comment = 
-[float] maxAcceleration.value = 20
-[float] maxAcceleration.comment = Maximum step acceleration
-[float] maxRotationAcceleration.value = 20
-[float] maxRotationAcceleration.comment = Maximum rotation acceleration
 [float] riseDownVel.value = 5
 [float] riseDownVel.comment = Rise down velocity
 [float] riseGain.value = 0.035
@@ -30,7 +26,7 @@
 [float] securityPhase.comment = 
 [float] securityTreshold.value = 0.65
 [float] securityTreshold.comment = 
-[float] shootAfterPhase.value = 0.4
+[float] shootAfterPhase.value = 0.9
 [float] shootAfterPhase.comment = Shooting step
 [float] shootFreq.value = 0.6
 [float] shootFreq.comment = Shooting step
@@ -43,7 +39,7 @@
 [float] shootStep.value = 0
 [float] shootStep.comment = Shooting step
 [float] smoothCommands.value = 0.97
-[float] smoothCommands.comment = Maximum step acceleration
+[float] smoothCommands.comment = Smoothing factor when changing commands
 [float] smoothTransition.value = 0.97
 [float] smoothTransition.comment = Smoothing factor when changing parameters
 [float] stepDownVel.value = 5
@@ -64,6 +60,10 @@
 [float] swingRollGain.comment = Swing roll gain
 [float] swingVel.value = 4
 [float] swingVel.comment = Swing velocity
+[float] terribleLeftAnkleRoll.value = 0
+[float] terribleLeftAnkleRoll.comment = 
+[float] terribleRightAnkleRoll.value = 0
+[float] terribleRightAnkleRoll.comment = 
 [float] trunkPitch_backward.value = 11
 [float] trunkPitch_backward.comment = Trunk Pitch
 [float] trunkPitch_forward.value = 11
