--- a/chewbacca/rhio/moves/approach/values.conf
+++ b/chewbacca/rhio/moves/approach/values.conf
@@ -1,7 +1,9 @@
 [bool] forceLocalize.value = 1
 [bool] forceLocalize.comment = 
-[bool] staticShoot.value = 0
-[bool] staticShoot.comment = 
+[bool] idiot.value = 0
+[bool] idiot.comment = Attack with only the magnetometer
+[bool] penalty.value = 0
+[bool] penalty.comment = Attack with only the magnetometer
 [float] applyKickAngle.value = 45
 [float] applyKickAngle.comment = 
 [float] applyKickDistMax.value = 80
@@ -24,11 +26,13 @@
 [float] goalQDisableThreshold.comment = 
 [float] goalQEnableThreshold.value = 0.7
 [float] goalQEnableThreshold.comment = 
+[float] lateralKickTreshold.value = 50
+[float] lateralKickTreshold.comment = Choose the range where we will do lateral kick
 [float] maxLateral.value = 20
 [float] maxLateral.comment = 
 [float] maxRotation.value = 20
 [float] maxRotation.comment = 
-[float] maxStep.value = 60
+[float] maxStep.value = 40
 [float] maxStep.comment = 
 [float] maxStepBackward.value = 20
 [float] maxStepBackward.comment = 
@@ -48,7 +52,7 @@
 [float] stepP.comment = 
 [float] targetX.value = 8
 [float] targetX.comment = 
-[float] targetY.value = 2
+[float] targetY.value = 6
 [float] targetY.comment = 
 [float] teamRadius.value = 200
 [float] teamRadius.comment = 
