--- a/chewbacca/rhio/moves/walk/values.conf
+++ b/chewbacca/rhio/moves/walk/values.conf
@@ -16,6 +16,10 @@
 [float] freq.comment = Walk frequency
 [float] lateralTrim.value = 0
 [float] lateralTrim.comment = 
+[float] maxAcceleration.value = 20
+[float] maxAcceleration.comment = Maximum step acceleration
+[float] maxRotationAcceleration.value = 20
+[float] maxRotationAcceleration.comment = Maximum rotation acceleration
 [float] riseDownVel.value = 5
 [float] riseDownVel.comment = Rise down velocity
 [float] riseGain.value = 0.035
@@ -26,10 +30,20 @@
 [float] securityPhase.comment = 
 [float] securityTreshold.value = 0.65
 [float] securityTreshold.comment = 
-[float] shootSpeed.value = 10
+[float] shootAfterPhase.value = 0.5
+[float] shootAfterPhase.comment = Shooting step
+[float] shootFreq.value = 0.9
+[float] shootFreq.comment = Shooting step
+[float] shootGain.value = 1
+[float] shootGain.comment = Shooting gain
+[float] shootPhase.value = 0.9
+[float] shootPhase.comment = Shooting step
+[float] shootSpeed.value = 4
 [float] shootSpeed.comment = 
+[float] shootStep.value = 0
+[float] shootStep.comment = Shooting step
 [float] smoothCommands.value = 0.97
-[float] smoothCommands.comment = Smoothing factor when changing commands
+[float] smoothCommands.comment = Maximum step acceleration
 [float] smoothTransition.value = 0.97
 [float] smoothTransition.comment = Smoothing factor when changing parameters
 [float] stepDownVel.value = 5
@@ -66,7 +80,7 @@
 [float] trunkXOffset_forward.comment = Trunk X offset
 [float] trunkYOffset.value = 0
 [float] trunkYOffset.comment = Trunk Y offset
-[float] trunkZOffset.value = 0.02
+[float] trunkZOffset.value = 0.022
 [float] trunkZOffset.comment = Trunk Z offset
 [float] turnTrim.value = 0
 [float] turnTrim.comment = 
