Copying mowgly values for approach, head & walk to chewbacca & django

--- a/chewbacca/rhio/moves/approach/values.conf
+++ b/chewbacca/rhio/moves/approach/values.conf
@@ -1,15 +1,11 @@
-[bool] forceLocalize.value = 1
+[bool] forceLocalize.value = 0
 [bool] forceLocalize.comment = 
 [bool] idiot.value = 0
 [bool] idiot.comment = Attack with only the magnetometer
 [bool] penalty.value = 0
 [bool] penalty.comment = Attack with only the magnetometer
-[float] applyKickAngle.value = 45
-[float] applyKickAngle.comment = 
-[float] applyKickDistMax.value = 80
-[float] applyKickDistMax.comment = 
-[float] applyKickDistMin.value = 15
-[float] applyKickDistMin.comment = 
+[float] applyKickDist.value = 70
+[float] applyKickDist.comment = 
 [float] ballQDisableTreshold.value = 0.3
 [float] ballQDisableTreshold.comment = 
 [float] ballQTreshold.value = 0.7
@@ -22,9 +18,9 @@
 [float] forceLocalizeDuration.comment = 
 [float] forceLocalizeInterval.value = 25
 [float] forceLocalizeInterval.comment = 
-[float] goalQDisableThreshold.value = 0.3
+[float] goalQDisableThreshold.value = 0.4
 [float] goalQDisableThreshold.comment = 
-[float] goalQEnableThreshold.value = 0.7
+[float] goalQEnableThreshold.value = 0.9
 [float] goalQEnableThreshold.comment = 
 [float] lateralKickTreshold.value = 50
 [float] lateralKickTreshold.comment = Choose the range where we will do lateral kick
@@ -32,13 +28,13 @@
 [float] maxLateral.comment = 
 [float] maxRotation.value = 20
 [float] maxRotation.comment = 
-[float] maxStep.value = 40
+[float] maxStep.value = 35
 [float] maxStep.comment = 
 [float] maxStepBackward.value = 20
 [float] maxStepBackward.comment = 
 [float] nearAlignerP.value = 0.2
 [float] nearAlignerP.comment = 
-[float] nearLateralP.value = 0.6
+[float] nearLateralP.value = 0.8
 [float] nearLateralP.comment = 
 [float] radius.value = 30
 [float] radius.comment = 
@@ -52,11 +48,11 @@
 [float] stepP.comment = 
 [float] targetX.value = 8
 [float] targetX.comment = 
-[float] targetY.value = 6
+[float] targetY.value = 15
 [float] targetY.comment = 
 [float] teamRadius.value = 200
 [float] teamRadius.comment = 
-[float] xRange.value = 7
+[float] xRange.value = 10
 [float] xRange.comment = 
-[float] yRange.value = 7
+[float] yRange.value = 6
 [float] yRange.comment = 
