--- a/django/rhio/moves/walk/values.conf
+++ b/django/rhio/moves/walk/values.conf
@@ -18,7 +18,7 @@
 [float] lateralTrim.comment = 
 [float] maxAcceleration.value = 20
 [float] maxAcceleration.comment = Maximum step acceleration
-[float] maxRotationAcceleration.value = 20
+[float] maxRotationAcceleration.value = 15
 [float] maxRotationAcceleration.comment = Maximum rotation acceleration
 [float] riseDownVel.value = 5
 [float] riseDownVel.comment = Rise down velocity
@@ -32,7 +32,7 @@
 [float] securityTreshold.comment = 
 [float] shootAfterPhase.value = 0.4
 [float] shootAfterPhase.comment = Shooting step
-[float] shootFreq.value = 0.6
+[float] shootFreq.value = 0.9
 [float] shootFreq.comment = Shooting step
 [float] shootGain.value = 1
 [float] shootGain.comment = Shooting gain
@@ -64,15 +64,19 @@
 [float] swingRollGain.comment = Swing roll gain
 [float] swingVel.value = 4
 [float] swingVel.comment = Swing velocity
+[float] terribleLeftAnkleRoll.value = 0
+[float] terribleLeftAnkleRoll.comment = 
+[float] terribleRightAnkleRoll.value = 0
+[float] terribleRightAnkleRoll.comment = 
 [float] trunkPitch_backward.value = 11
 [float] trunkPitch_backward.comment = Trunk Pitch
-[float] trunkPitch_forward.value = 11
+[float] trunkPitch_forward.value = 11.8
 [float] trunkPitch_forward.comment = Trunk Pitch
 [float] trunkRoll.value = 0
 [float] trunkRoll.comment = Roll of the trunk
 [float] trunkXOffset_backward.value = 0.01
 [float] trunkXOffset_backward.comment = Trunk X offset
-[float] trunkXOffset_forward.value = 0.02
+[float] trunkXOffset_forward.value = 0.018
 [float] trunkXOffset_forward.comment = Trunk X offset
 [float] trunkYOffset.value = 0
 [float] trunkYOffset.comment = Trunk Y offset
