--- a/mowgly/rhio/moves/goal_keeper/values.conf
+++ b/mowgly/rhio/moves/goal_keeper/values.conf
@@ -1,4 +1,10 @@
-[float] clearingDuration.value = 30
+[float] clearingDuration.value = 20
 [float] clearingDuration.comment = Duration of the clearing action
-[float] radius.value = 200
-[float] radius.comment = Radius that triggers the goal intervention
+[float] xMargin.value = 0
+[float] xMargin.comment = Ball X margin
+[float] xStop.value = 50
+[float] xStop.comment = Ball X margin
+[float] yMargin.value = 0
+[float] yMargin.comment = Ball Y margin
+[float] yStop.value = 25
+[float] yStop.comment = Ball Y margin
