--- a/mowgly/rhio/moves/approach/values.conf
+++ b/mowgly/rhio/moves/approach/values.conf
@@ -4,12 +4,8 @@
 [bool] idiot.comment = Attack with only the magnetometer
 [bool] penalty.value = 0
 [bool] penalty.comment = Attack with only the magnetometer
-[float] applyKickAngle.value = 45
-[float] applyKickAngle.comment = 
-[float] applyKickDistMax.value = 80
-[float] applyKickDistMax.comment = 
-[float] applyKickDistMin.value = 15
-[float] applyKickDistMin.comment = 
+[float] applyKickDist.value = 70
+[float] applyKickDist.comment = 
 [float] ballQDisableTreshold.value = 0.3
 [float] ballQDisableTreshold.comment = 
 [float] ballQTreshold.value = 0.7
@@ -38,7 +34,7 @@
 [float] maxStepBackward.comment = 
 [float] nearAlignerP.value = 0.2
 [float] nearAlignerP.comment = 
-[float] nearLateralP.value = 0.6
+[float] nearLateralP.value = 0.8
 [float] nearLateralP.comment = 
 [float] radius.value = 30
 [float] radius.comment = 
@@ -56,7 +52,7 @@
 [float] targetY.comment = 
 [float] teamRadius.value = 200
 [float] teamRadius.comment = 
-[float] xRange.value = 6
+[float] xRange.value = 10
 [float] xRange.comment = 
 [float] yRange.value = 6
 [float] yRange.comment = 
