--- a/django/rhio/moves/approach/values.conf
+++ b/django/rhio/moves/approach/values.conf
@@ -1,3 +1,5 @@
+[bool] enableLateralKick.value = 1
+[bool] enableLateralKick.comment = Enable the lateral kicks
 [bool] forceLocalize.value = 0
 [bool] forceLocalize.comment = 
 [bool] idiot.value = 0
@@ -22,7 +24,7 @@
 [float] goalQDisableThreshold.comment = 
 [float] goalQEnableThreshold.value = 0.9
 [float] goalQEnableThreshold.comment = 
-[float] lateralKickTreshold.value = 50
+[float] lateralKickTreshold.value = 60
 [float] lateralKickTreshold.comment = Choose the range where we will do lateral kick
 [float] maxLateral.value = 20
 [float] maxLateral.comment = 
@@ -34,11 +36,13 @@
 [float] maxStepBackward.comment = 
 [float] nearAlignerP.value = 0.2
 [float] nearAlignerP.comment = 
-[float] nearLateralP.value = 0.8
+[float] nearLateralP.value = 0.5
 [float] nearLateralP.comment = 
+[float] placementMargin.value = 8
+[float] placementMargin.comment = Distance (cm) to the target to enter rotate
 [float] radius.value = 30
 [float] radius.comment = 
-[float] rotateAlignerP.value = 0.4
+[float] rotateAlignerP.value = 0.3
 [float] rotateAlignerP.comment = 
 [float] rotateLateralP.value = -0.6
 [float] rotateLateralP.comment = 
@@ -48,7 +52,7 @@
 [float] stepP.comment = 
 [float] targetX.value = 8
 [float] targetX.comment = 
-[float] targetY.value = 15
+[float] targetY.value = 13
 [float] targetY.comment = 
 [float] teamRadius.value = 200
 [float] teamRadius.comment = 
