--- a/django/rhio/moves/walk/values.conf
+++ b/django/rhio/moves/walk/values.conf
@@ -18,7 +18,7 @@
 [float] lateralTrim.comment = 
 [float] maxAcceleration.value = 20
 [float] maxAcceleration.comment = Maximum step acceleration
-[float] maxRotationAcceleration.value = 15
+[float] maxRotationAcceleration.value = 20
 [float] maxRotationAcceleration.comment = Maximum rotation acceleration
 [float] riseDownVel.value = 5
 [float] riseDownVel.comment = Rise down velocity
@@ -30,22 +30,24 @@
 [float] securityPhase.comment = 
 [float] securityTreshold.value = 0.65
 [float] securityTreshold.comment = 
-[float] shootAfterPhase.value = 0.4
+[float] shootAfterPhase.value = 0.5
 [float] shootAfterPhase.comment = Shooting step
 [float] shootFreq.value = 0.9
 [float] shootFreq.comment = Shooting step
 [float] shootGain.value = 1
 [float] shootGain.comment = Shooting gain
-[float] shootPhase.value = 0.9
+[float] shootPhase.value = 0.2
 [float] shootPhase.comment = Shooting step
 [float] shootSpeed.value = 4
 [float] shootSpeed.comment = 
 [float] shootStep.value = 0
 [float] shootStep.comment = Shooting step
-[float] smoothCommands.value = 0.97
+[float] smoothCommands.value = 0.9
 [float] smoothCommands.comment = Maximum step acceleration
 [float] smoothTransition.value = 0.97
 [float] smoothTransition.comment = Smoothing factor when changing parameters
+[float] startPhase.value = 0.25
+[float] startPhase.comment = Start phase
 [float] stepDownVel.value = 5
 [float] stepDownVel.comment = Step down velocity
 [float] stepTrim.value = -5
@@ -64,11 +66,7 @@
 [float] swingRollGain.comment = Swing roll gain
 [float] swingVel.value = 4
 [float] swingVel.comment = Swing velocity
-[float] terribleLeftAnkleRoll.value = 0
-[float] terribleLeftAnkleRoll.comment = 
-[float] terribleRightAnkleRoll.value = 0
-[float] terribleRightAnkleRoll.comment = 
-[float] trunkPitch_backward.value = 11
+[float] trunkPitch_backward.value = 9
 [float] trunkPitch_backward.comment = Trunk Pitch
 [float] trunkPitch_forward.value = 11.8
 [float] trunkPitch_forward.comment = Trunk Pitch
