LH: Committing local changes in tom config

--- a/tom/rhio/moves/head/values.conf
+++ b/tom/rhio/moves/head/values.conf
@@ -1,10 +1,24 @@
+[int] framesPerPos.value = 3
+[int] framesPerPos.comment = Frames per position
+[int] scanPanNbPos.value = 4
+[int] scanPanNbPos.comment = Number of different positions for scan in Pan
+[int] scanTiltNbPos.value = 2
+[int] scanTiltNbPos.comment = Number of different positions for scan in Tilt
 [float] apertureHeight.value = 99.0845
 [float] apertureHeight.comment = Camera height aperture in degrees
 [float] apertureWidth.value = 81.8634
 [float] apertureWidth.comment = Camera width aperture in degrees
-[float] maxTilt.value = 60
-[float] maxTilt.comment = Max tilt
-[float] minTilt.value = 6
-[float] minTilt.comment = Min tilt
-[float] smoothing.value = 1
-[float] smoothing.comment = Pan/Tilt position smoothing coef
+[float] maxPan.value = 90
+[float] maxPan.comment = Maximum pan of image center
+[float] maxTilt.value = 55
+[float] maxTilt.comment = Maximum tilt of image center
+[float] minTilt.value = 35
+[float] minTilt.comment = Minimum tilt of image center
+[float] movingCool.value = 0.06
+[float] movingCool.comment = Moving cool delay
+[float] scanPanRange.value = 140
+[float] scanPanRange.comment = Scan pan range, looking in [-range/2, range/2]
+[float] scanTiltOffset.value = 45
+[float] scanTiltOffset.comment = Offset for tilt scanning
+[float] scanTiltRange.value = 10
+[float] scanTiltRange.comment = Scan tilt range looking in [offset-range/2, offset+range/2]
