--- a/tom/rhio/moves/approach/values.conf
+++ b/tom/rhio/moves/approach/values.conf
@@ -1,15 +1,11 @@
-[bool] forceLocalize.value = 1
+[bool] forceLocalize.value = 0
 [bool] forceLocalize.comment = 
-[bool] idiot.value = 0
+[bool] idiot.value = 1
 [bool] idiot.comment = Attack with only the magnetometer
 [bool] penalty.value = 0
 [bool] penalty.comment = Attack with only the magnetometer
-[float] applyKickAngle.value = 45
-[float] applyKickAngle.comment = 
-[float] applyKickDistMax.value = 80
-[float] applyKickDistMax.comment = 
-[float] applyKickDistMin.value = 15
-[float] applyKickDistMin.comment = 
+[float] applyKickDist.value = 250
+[float] applyKickDist.comment = 
 [float] ballQDisableTreshold.value = 0.3
 [float] ballQDisableTreshold.comment = 
 [float] ballQTreshold.value = 0.7
@@ -26,37 +22,37 @@
 [float] goalQDisableThreshold.comment = 
 [float] goalQEnableThreshold.value = 0.7
 [float] goalQEnableThreshold.comment = 
-[float] lateralKickTreshold.value = 75
+[float] lateralKickTreshold.value = 180
 [float] lateralKickTreshold.comment = Choose the range where we will do lateral kick
 [float] maxLateral.value = 20
 [float] maxLateral.comment = 
 [float] maxRotation.value = 20
 [float] maxRotation.comment = 
-[float] maxStep.value = 60
+[float] maxStep.value = 70
 [float] maxStep.comment = 
 [float] maxStepBackward.value = 20
 [float] maxStepBackward.comment = 
 [float] nearAlignerP.value = 0.2
 [float] nearAlignerP.comment = 
-[float] nearLateralP.value = 0.6
+[float] nearLateralP.value = 0.7
 [float] nearLateralP.comment = 
-[float] radius.value = 30
+[float] radius.value = 25
 [float] radius.comment = 
-[float] rotateAlignerP.value = 0.4
+[float] rotateAlignerP.value = 0.6
 [float] rotateAlignerP.comment = 
-[float] rotateLateralP.value = -0.6
+[float] rotateLateralP.value = -1
 [float] rotateLateralP.comment = 
 [float] shootInterval.value = 3
 [float] shootInterval.comment = 
 [float] stepP.value = 1
 [float] stepP.comment = 
-[float] targetX.value = 8
+[float] targetX.value = 25
 [float] targetX.comment = 
-[float] targetY.value = 2
+[float] targetY.value = 12
 [float] targetY.comment = 
 [float] teamRadius.value = 200
 [float] teamRadius.comment = 
-[float] xRange.value = 7
+[float] xRange.value = 6
 [float] xRange.comment = 
-[float] yRange.value = 7
+[float] yRange.value = 6
 [float] yRange.comment = 
