--- a/tom/rhio/moves/walk/values.conf
+++ b/tom/rhio/moves/walk/values.conf
@@ -14,11 +14,11 @@
 [float] footYOffset.comment = Front Y offset
 [float] freq.value = 1.8
 [float] freq.comment = Walk frequency
-[float] lateralTrim.value = 5
+[float] lateralTrim.value = 0
 [float] lateralTrim.comment = 
-[float] maxAcceleration.value = 20
+[float] maxAcceleration.value = 30
 [float] maxAcceleration.comment = Maximum step acceleration
-[float] maxRotationAcceleration.value = 20
+[float] maxRotationAcceleration.value = 30
 [float] maxRotationAcceleration.comment = Maximum rotation acceleration
 [float] riseDownVel.value = 5
 [float] riseDownVel.comment = Rise down velocity
@@ -30,7 +30,7 @@
 [float] securityPhase.comment = 
 [float] securityTreshold.value = 0.8
 [float] securityTreshold.comment = 
-[float] shootAfterPhase.value = 0.5
+[float] shootAfterPhase.value = 0.4
 [float] shootAfterPhase.comment = Shooting step
 [float] shootFreq.value = 0.54
 [float] shootFreq.comment = Shooting step
@@ -46,6 +46,8 @@
 [float] smoothCommands.comment = Maximum step acceleration
 [float] smoothTransition.value = 0.97
 [float] smoothTransition.comment = Smoothing factor when changing parameters
+[float] startPhase.value = 0
+[float] startPhase.comment = Start phase
 [float] stepDownVel.value = 5
 [float] stepDownVel.comment = Step down velocity
 [float] stepTrim.value = -10
@@ -64,10 +66,6 @@
 [float] swingRollGain.comment = Swing roll gain
 [float] swingVel.value = 4
 [float] swingVel.comment = Swing velocity
-[float] terribleLeftAnkleRoll.value = 0
-[float] terribleLeftAnkleRoll.comment = 
-[float] terribleRightAnkleRoll.value = 0
-[float] terribleRightAnkleRoll.comment = 
 [float] trunkPitch_backward.value = 10
 [float] trunkPitch_backward.comment = Trunk Pitch
 [float] trunkPitch_forward.value = 10
@@ -82,5 +80,5 @@
 [float] trunkYOffset.comment = Trunk Y offset
 [float] trunkZOffset.value = 0.04
 [float] trunkZOffset.comment = Trunk Z offset
-[float] turnTrim.value = 1
+[float] turnTrim.value = 0
 [float] turnTrim.comment = 
