--- a/chewbacca/rhio/moves/placer/values.conf
+++ b/chewbacca/rhio/moves/placer/values.conf
@@ -1,12 +1,14 @@
-[bool] directMode.value = 0
+[bool] directMode.value = 1
 [bool] directMode.comment = Turning to target before walking target
+[float] hysteresis.value = 1.5
+[float] hysteresis.comment = 
 [float] lateralP.value = 1
 [float] lateralP.comment = 
 [float] marginAzimuth.value = 20
 [float] marginAzimuth.comment = 
-[float] marginX.value = 50
+[float] marginX.value = 20
 [float] marginX.comment = 
-[float] marginY.value = 50
+[float] marginY.value = 20
 [float] marginY.comment = 
 [float] maxBwdStep.value = 20
 [float] maxBwdStep.comment = 
