--- a/chewbacca/rhio/moves/walk/values.conf
+++ b/chewbacca/rhio/moves/walk/values.conf
@@ -16,9 +16,9 @@
 [float] freq.comment = Walk frequency
 [float] lateralTrim.value = 0
 [float] lateralTrim.comment = 
-[float] maxAcceleration.value = 20
+[float] maxAcceleration.value = 30
 [float] maxAcceleration.comment = Maximum step acceleration
-[float] maxRotationAcceleration.value = 15
+[float] maxRotationAcceleration.value = 30
 [float] maxRotationAcceleration.comment = Maximum rotation acceleration
 [float] riseDownVel.value = 5
 [float] riseDownVel.comment = Rise down velocity
@@ -42,10 +42,12 @@
 [float] shootSpeed.comment = 
 [float] shootStep.value = 0
 [float] shootStep.comment = Shooting step
-[float] smoothCommands.value = 0.97
+[float] smoothCommands.value = 0.9
 [float] smoothCommands.comment = Maximum step acceleration
 [float] smoothTransition.value = 0.97
 [float] smoothTransition.comment = Smoothing factor when changing parameters
+[float] startPhase.value = 0
+[float] startPhase.comment = Start phase
 [float] stepDownVel.value = 5
 [float] stepDownVel.comment = Step down velocity
 [float] stepTrim.value = -5
@@ -64,10 +66,6 @@
 [float] swingRollGain.comment = Swing roll gain
 [float] swingVel.value = 4
 [float] swingVel.comment = Swing velocity
-[float] terribleLeftAnkleRoll.value = 0
-[float] terribleLeftAnkleRoll.comment = 
-[float] terribleRightAnkleRoll.value = 0
-[float] terribleRightAnkleRoll.comment = 
 [float] trunkPitch_backward.value = 11
 [float] trunkPitch_backward.comment = Trunk Pitch
 [float] trunkPitch_forward.value = 11.8
