add simple goal

--- a/newFake/goals.conf
+++ b/newFake/goals.conf
@@ -7,6 +7,9 @@ clippingBorders
 clippingBordersSliced
 linesROI
 linesByROI
+linesROIGoalsDilated
+goalMaskByROIClipping2
+goalByROIStdClipping2
 clippingExperimentalEroded
 clippingExperimental
 clippingExperimentalBorders
