Update chewbacca config

--- a/chewbacca/rhio/moves/approach/values.conf
+++ b/chewbacca/rhio/moves/approach/values.conf
@@ -1,3 +1,5 @@
+[bool] enableLateralKick.value = 1
+[bool] enableLateralKick.comment = Enable the lateral kicks
 [bool] forceLocalize.value = 0
 [bool] forceLocalize.comment = 
 [bool] idiot.value = 0
@@ -12,6 +14,8 @@
 [float] ballQTreshold.comment = 
 [float] centeringCorner.value = 250
 [float] centeringCorner.comment = 
+[float] cooldown.value = 0.2
+[float] cooldown.comment = Cooldown duration
 [float] farAlignerP.value = 0.2
 [float] farAlignerP.comment = 
 [float] forceLocalizeDuration.value = 5
@@ -22,7 +26,7 @@
 [float] goalQDisableThreshold.comment = 
 [float] goalQEnableThreshold.value = 0.9
 [float] goalQEnableThreshold.comment = 
-[float] lateralKickTreshold.value = 50
+[float] lateralKickTreshold.value = 60
 [float] lateralKickTreshold.comment = Choose the range where we will do lateral kick
 [float] maxLateral.value = 20
 [float] maxLateral.comment = 
@@ -34,9 +38,11 @@
 [float] maxStepBackward.comment = 
 [float] nearAlignerP.value = 0.2
 [float] nearAlignerP.comment = 
-[float] nearLateralP.value = 0.8
+[float] nearLateralP.value = 0.6
 [float] nearLateralP.comment = 
-[float] radius.value = 30
+[float] placementMargin.value = 10
+[float] placementMargin.comment = Distance (cm) to the target to enter rotate
+[float] radius.value = 35
 [float] radius.comment = 
 [float] rotateAlignerP.value = 0.4
 [float] rotateAlignerP.comment = 
@@ -48,11 +54,13 @@
 [float] stepP.comment = 
 [float] targetX.value = 8
 [float] targetX.comment = 
-[float] targetY.value = 15
+[float] targetY.value = 8
 [float] targetY.comment = 
 [float] teamRadius.value = 200
 [float] teamRadius.comment = 
-[float] xRange.value = 10
+[float] warmup.value = 0
+[float] warmup.comment = Warmup
+[float] xRange.value = 7
 [float] xRange.comment = 
 [float] yRange.value = 6
 [float] yRange.comment = 
