--- a/tom/rhio/moves/approach/values.conf
+++ b/tom/rhio/moves/approach/values.conf
@@ -1,6 +1,8 @@
+[bool] enableLateralKick.value = 0
+[bool] enableLateralKick.comment = Enable the lateral kicks
 [bool] forceLocalize.value = 0
 [bool] forceLocalize.comment = 
-[bool] idiot.value = 1
+[bool] idiot.value = 0
 [bool] idiot.comment = Attack with only the magnetometer
 [bool] penalty.value = 0
 [bool] penalty.comment = Attack with only the magnetometer
@@ -12,6 +14,8 @@
 [float] ballQTreshold.comment = 
 [float] centeringCorner.value = 250
 [float] centeringCorner.comment = 
+[float] cooldown.value = 1.5
+[float] cooldown.comment = Cooldown duration
 [float] farAlignerP.value = 0.2
 [float] farAlignerP.comment = 
 [float] forceLocalizeDuration.value = 5
@@ -36,8 +40,12 @@
 [float] nearAlignerP.comment = 
 [float] nearLateralP.value = 0.7
 [float] nearLateralP.comment = 
-[float] radius.value = 25
+[float] placementMargin.value = 10
+[float] placementMargin.comment = Distance (cm) to the target to enter rotate
+[float] radius.value = 35
 [float] radius.comment = 
+[float] refereeExtraRadius.value = 20
+[float] refereeExtraRadius.comment = Additionnal radius to the teamRadius when referee asks to let play
 [float] rotateAlignerP.value = 0.6
 [float] rotateAlignerP.comment = 
 [float] rotateLateralP.value = -1
@@ -46,12 +54,14 @@
 [float] shootInterval.comment = 
 [float] stepP.value = 1
 [float] stepP.comment = 
-[float] targetX.value = 25
+[float] targetX.value = 16
 [float] targetX.comment = 
 [float] targetY.value = 12
 [float] targetY.comment = 
 [float] teamRadius.value = 200
 [float] teamRadius.comment = 
+[float] warmup.value = 1.5
+[float] warmup.comment = Warmup
 [float] xRange.value = 6
 [float] xRange.comment = 
 [float] yRange.value = 6
