--- a/tom/rhio/moves/placer/values.conf
+++ b/tom/rhio/moves/placer/values.conf
@@ -1,5 +1,7 @@
-[bool] directMode.value = 0
+[bool] directMode.value = 1
 [bool] directMode.comment = Turning to target before walking target
+[float] hysteresis.value = 1.5
+[float] hysteresis.comment = 
 [float] lateralP.value = 1
 [float] lateralP.comment = 
 [float] marginAzimuth.value = 20
@@ -10,7 +12,7 @@
 [float] marginY.comment = 
 [float] maxBwdStep.value = 20
 [float] maxBwdStep.comment = 
-[float] maxFwdStep.value = 40
+[float] maxFwdStep.value = 70
 [float] maxFwdStep.comment = 
 [float] maxLateral.value = 10
 [float] maxLateral.comment = 
