Uncommited on django. Good shoot though

--- a/django/rhio/moves/placer/values.conf
+++ b/django/rhio/moves/placer/values.conf
@@ -1,5 +1,7 @@
-[bool] directMode.value = 0
+[bool] directMode.value = 1
 [bool] directMode.comment = Turning to target before walking target
+[float] hysteresis.value = 1.5
+[float] hysteresis.comment = 
 [float] lateralP.value = 1
 [float] lateralP.comment = 
 [float] marginAzimuth.value = 20
