--- a/django/rhio/moves/approach/values.conf
+++ b/django/rhio/moves/approach/values.conf
@@ -6,7 +6,7 @@
 [bool] idiot.comment = Attack with only the magnetometer
 [bool] penalty.value = 0
 [bool] penalty.comment = Attack with only the magnetometer
-[float] applyKickDist.value = 70
+[float] applyKickDist.value = 160
 [float] applyKickDist.comment = 
 [float] ballQDisableTreshold.value = 0.3
 [float] ballQDisableTreshold.comment = 
@@ -14,6 +14,8 @@
 [float] ballQTreshold.comment = 
 [float] centeringCorner.value = 250
 [float] centeringCorner.comment = 
+[float] cooldown.value = 1
+[float] cooldown.comment = Cooldown duration
 [float] farAlignerP.value = 0.2
 [float] farAlignerP.comment = 
 [float] forceLocalizeDuration.value = 5
@@ -42,6 +44,8 @@
 [float] placementMargin.comment = Distance (cm) to the target to enter rotate
 [float] radius.value = 30
 [float] radius.comment = 
+[float] refereeExtraRadius.value = 20
+[float] refereeExtraRadius.comment = Additionnal radius to the teamRadius when referee asks to let play
 [float] rotateAlignerP.value = 0.3
 [float] rotateAlignerP.comment = 
 [float] rotateLateralP.value = -0.6
@@ -50,12 +54,14 @@
 [float] shootInterval.comment = 
 [float] stepP.value = 1
 [float] stepP.comment = 
-[float] targetX.value = 8
+[float] targetX.value = 6
 [float] targetX.comment = 
 [float] targetY.value = 13
 [float] targetY.comment = 
 [float] teamRadius.value = 200
 [float] teamRadius.comment = 
+[float] warmup.value = 0
+[float] warmup.comment = Warmup
 [float] xRange.value = 10
 [float] xRange.comment = 
 [float] yRange.value = 6
