--- a/chewbacca/rhio/moves/approach/values.conf
+++ b/chewbacca/rhio/moves/approach/values.conf
@@ -14,7 +14,7 @@
 [float] ballQTreshold.comment = 
 [float] centeringCorner.value = 250
 [float] centeringCorner.comment = 
-[float] cooldown.value = 0.2
+[float] cooldown.value = 1
 [float] cooldown.comment = Cooldown duration
 [float] farAlignerP.value = 0.2
 [float] farAlignerP.comment = 
@@ -44,6 +44,8 @@
 [float] placementMargin.comment = Distance (cm) to the target to enter rotate
 [float] radius.value = 35
 [float] radius.comment = 
+[float] refereeExtraRadius.value = 20
+[float] refereeExtraRadius.comment = Additionnal radius to the teamRadius when referee asks to let play
 [float] rotateAlignerP.value = 0.4
 [float] rotateAlignerP.comment = 
 [float] rotateLateralP.value = -0.6
