Tom Environments update

--- a/tom/rhio/moves/approach/values.conf
+++ b/tom/rhio/moves/approach/values.conf
@@ -1,3 +1,5 @@
+[bool] chooseFoot.value = 0
+[bool] chooseFoot.comment = 
 [bool] enableLateralKick.value = 0
 [bool] enableLateralKick.comment = Enable the lateral kicks
 [bool] forceLocalize.value = 0
@@ -32,7 +34,7 @@
 [float] maxLateral.comment = 
 [float] maxRotation.value = 20
 [float] maxRotation.comment = 
-[float] maxStep.value = 70
+[float] maxStep.value = 60
 [float] maxStep.comment = 
 [float] maxStepBackward.value = 20
 [float] maxStepBackward.comment = 
@@ -54,9 +56,9 @@
 [float] shootInterval.comment = 
 [float] stepP.value = 1
 [float] stepP.comment = 
-[float] targetX.value = 16
+[float] targetX.value = 12
 [float] targetX.comment = 
-[float] targetY.value = 12
+[float] targetY.value = -8
 [float] targetY.comment = 
 [float] teamRadius.value = 200
 [float] teamRadius.comment = 
