tom odometry calib

--- a/tom/rhio/model/values.conf
+++ b/tom/rhio/model/values.conf
@@ -1,18 +1,18 @@
 [bool] noIMU.value = 0
 [bool] noIMU.comment = Disable IMU pitch/roll use for all models
-[float] odometry_X_offset.value = 0.00238217
+[float] odometry_X_offset.value = 0.0145033
 [float] odometry_X_offset.comment = Odometry correction coef: X = coef*x + coef*y + coef*t + OFFSET
-[float] odometry_X_t.value = -0.0191864
+[float] odometry_X_t.value = 0.119967
 [float] odometry_X_t.comment = Odometry correction coef: X = coef*x + coef*y + COEF*t + offset
-[float] odometry_X_x.value = 1.16944
+[float] odometry_X_x.value = 1.13552
 [float] odometry_X_x.comment = Odometry correction coef: X = COEF*x + coef*y + coef*t + offset
-[float] odometry_X_y.value = 0.0133855
+[float] odometry_X_y.value = 0.17415
 [float] odometry_X_y.comment = Odometry correction coef: X = coef*x + COEF*y + coef*t + offset
-[float] odometry_Y_offset.value = 0.00144206
+[float] odometry_Y_offset.value = 0.00143107
 [float] odometry_Y_offset.comment = Odometry correction coef: Y = coef*X + coef*Y + coef*t + OFFSET
-[float] odometry_Y_t.value = -0.0313301
+[float] odometry_Y_t.value = -0.180057
 [float] odometry_Y_t.comment = Odometry correction coef: Y = coef*X + coef*Y + COEF*t + offset
-[float] odometry_Y_x.value = 0.0269549
+[float] odometry_Y_x.value = 0.0311818
 [float] odometry_Y_x.comment = Odometry correction coef: Y = COEF*X + coef*Y + coef*t + offset
-[float] odometry_Y_y.value = 1.34264
+[float] odometry_Y_y.value = 1.10732
 [float] odometry_Y_y.comment = Odometry correction coef: Y = coef*X + COEF*Y + coef*t + offset
