--- a/mowgly/rhio/moves/approach/values.conf
+++ b/mowgly/rhio/moves/approach/values.conf
@@ -1,10 +1,12 @@
+[bool] enableLateralKick.value = 1
+[bool] enableLateralKick.comment = Enable the lateral kicks
 [bool] forceLocalize.value = 0
 [bool] forceLocalize.comment = 
 [bool] idiot.value = 0
 [bool] idiot.comment = Attack with only the magnetometer
 [bool] penalty.value = 0
 [bool] penalty.comment = Attack with only the magnetometer
-[float] applyKickDist.value = 70
+[float] applyKickDist.value = 130
 [float] applyKickDist.comment = 
 [float] ballQDisableTreshold.value = 0.3
 [float] ballQDisableTreshold.comment = 
@@ -12,6 +14,8 @@
 [float] ballQTreshold.comment = 
 [float] centeringCorner.value = 250
 [float] centeringCorner.comment = 
+[float] cooldown.value = 0.5
+[float] cooldown.comment = Cooldown duration
 [float] farAlignerP.value = 0.2
 [float] farAlignerP.comment = 
 [float] forceLocalizeDuration.value = 5
@@ -36,8 +40,12 @@
 [float] nearAlignerP.comment = 
 [float] nearLateralP.value = 0.8
 [float] nearLateralP.comment = 
+[float] placementMargin.value = 10
+[float] placementMargin.comment = Distance (cm) to the target to enter rotate
 [float] radius.value = 30
 [float] radius.comment = 
+[float] refereeExtraRadius.value = 20
+[float] refereeExtraRadius.comment = Additionnal radius to the teamRadius when referee asks to let play
 [float] rotateAlignerP.value = 0.4
 [float] rotateAlignerP.comment = 
 [float] rotateLateralP.value = -0.6
@@ -48,10 +56,12 @@
 [float] stepP.comment = 
 [float] targetX.value = 8
 [float] targetX.comment = 
-[float] targetY.value = 15
+[float] targetY.value = 13.5
 [float] targetY.comment = 
 [float] teamRadius.value = 200
 [float] teamRadius.comment = 
+[float] warmup.value = 0
+[float] warmup.comment = Warmup
 [float] xRange.value = 10
 [float] xRange.comment = 
 [float] yRange.value = 6
