--- a/mowgly/rhio/moves/walk/values.conf
+++ b/mowgly/rhio/moves/walk/values.conf
@@ -28,7 +28,7 @@
 [float] riseUpVel.comment = Rise up velocity
 [float] securityPhase.value = 0.1
 [float] securityPhase.comment = 
-[float] securityTreshold.value = 0.65
+[float] securityTreshold.value = 0.5
 [float] securityTreshold.comment = 
 [float] shootAfterPhase.value = 0.4
 [float] shootAfterPhase.comment = Shooting step
@@ -46,6 +46,8 @@
 [float] smoothCommands.comment = Maximum step acceleration
 [float] smoothTransition.value = 0.97
 [float] smoothTransition.comment = Smoothing factor when changing parameters
+[float] startPhase.value = 0
+[float] startPhase.comment = Start phase
 [float] stepDownVel.value = 5
 [float] stepDownVel.comment = Step down velocity
 [float] stepTrim.value = -5
