--- a/mowgly/rhio/pressure/values.conf
+++ b/mowgly/rhio/pressure/values.conf
@@ -1,6 +1,2 @@
-[int] leftId.value = 123
-[int] leftId.comment = 
-[int] rightId.value = 124
-[int] rightId.comment = 
-[float] goodWeight.value = 8000
-[float] goodWeight.comment = Normal weight when the robot is on its feet
+[float] normalWeight.value = 1.6e+06
+[float] normalWeight.comment = 
