--- a/django/rhio/moves/approach/values.conf
+++ b/django/rhio/moves/approach/values.conf
@@ -1,3 +1,5 @@
+[bool] chooseFoot.value = 1
+[bool] chooseFoot.comment = 
 [bool] enableLateralKick.value = 1
 [bool] enableLateralKick.comment = Enable the lateral kicks
 [bool] forceLocalize.value = 0
