--- a/django/rhio/model/values.conf
+++ b/django/rhio/model/values.conf
@@ -1,18 +1,18 @@
 [bool] noIMU.value = 0
 [bool] noIMU.comment = Disable IMU pitch/roll use for all models
-[float] odometry_X_offset.value = -0.000175854
+[float] odometry_X_offset.value = 0.00865426
 [float] odometry_X_offset.comment = Odometry correction coef: X = coef*x + coef*y + coef*t + OFFSET
-[float] odometry_X_t.value = -0.00777613
+[float] odometry_X_t.value = -0.136895
 [float] odometry_X_t.comment = Odometry correction coef: X = coef*x + coef*y + COEF*t + offset
-[float] odometry_X_x.value = 1.30361
+[float] odometry_X_x.value = 1.06773
 [float] odometry_X_x.comment = Odometry correction coef: X = COEF*x + coef*y + coef*t + offset
-[float] odometry_X_y.value = -0.0874614
+[float] odometry_X_y.value = -0.0665153
 [float] odometry_X_y.comment = Odometry correction coef: X = coef*x + COEF*y + coef*t + offset
-[float] odometry_Y_offset.value = 0.00164559
+[float] odometry_Y_offset.value = 4.48194e-05
 [float] odometry_Y_offset.comment = Odometry correction coef: Y = coef*X + coef*Y + coef*t + OFFSET
-[float] odometry_Y_t.value = 0.0892625
+[float] odometry_Y_t.value = -0.124426
 [float] odometry_Y_t.comment = Odometry correction coef: Y = coef*X + coef*Y + COEF*t + offset
-[float] odometry_Y_x.value = 0.251246
+[float] odometry_Y_x.value = -0.00939276
 [float] odometry_Y_x.comment = Odometry correction coef: Y = COEF*X + coef*Y + coef*t + offset
-[float] odometry_Y_y.value = 1.21691
+[float] odometry_Y_y.value = 1.05423
 [float] odometry_Y_y.comment = Odometry correction coef: Y = coef*X + COEF*Y + coef*t + offset
