--- a/django/rhio/teamplay/values.conf
+++ b/django/rhio/teamplay/values.conf
@@ -1,4 +1,6 @@
 [bool] enable.value = 1
 [bool] enable.comment = 
+[int] priority.value = 1
+[int] priority.comment = 0: low; 1: normal; 2: hight Priority
 [float] broadcastPeriod.value = 0.3
-[float] broadcastPeriod.comment = 
+[float] broadcastPeriod.comment = UDP broadcast period in seconds
