--- a/chewbacca/rhio/moves/approach/values.conf
+++ b/chewbacca/rhio/moves/approach/values.conf
@@ -1,3 +1,5 @@
+[bool] chooseFoot.value = 1
+[bool] chooseFoot.comment = 
 [bool] enableLateralKick.value = 1
 [bool] enableLateralKick.comment = Enable the lateral kicks
 [bool] forceLocalize.value = 0
@@ -60,7 +62,7 @@
 [float] targetY.comment = 
 [float] teamRadius.value = 200
 [float] teamRadius.comment = 
-[float] warmup.value = 0
+[float] warmup.value = 0.5
 [float] warmup.comment = Warmup
 [float] xRange.value = 7
 [float] xRange.comment = 
