--- a/django/rhio/moves/search/values.conf
+++ b/django/rhio/moves/search/values.conf
@@ -1,3 +1,5 @@
+[bool] enableShare.value = 1
+[bool] enableShare.comment = 
 [float] P1Azimuth.value = 0
 [float] P1Azimuth.comment = Patrol checkpoint 1 Azimuth
 [float] P1X.value = 300
@@ -18,7 +20,13 @@
 [float] beginX.comment = Begin X
 [float] beginY.value = 0
 [float] beginY.comment = Begin Y
-[float] rotateAfter.value = 5
+[float] rotateAfter.value = 3
 [float] rotateAfter.comment = The time before the robot begins its rotation when searching the ball
 [float] rotateAngle.value = 25
 [float] rotateAngle.comment = The angle that will be send to rotate when searching the ball
+[float] shareBallQ.value = 0.9
+[float] shareBallQ.comment = Required ball Q for shared
+[float] shareFieldQ.value = 0.9
+[float] shareFieldQ.comment = Required field Q for shared
+[float] shareSmooth.value = 0.99
+[float] shareSmooth.comment = Share smoothing
