Update on django config

--- a/django/rhio/moves/goal_keeper/values.conf
+++ b/django/rhio/moves/goal_keeper/values.conf
@@ -1,3 +1,5 @@
+[bool] isPlacing.value = 0
+[bool] isPlacing.comment = Is the robot performing an accurate placement
 [float] placeMaxX.value = 300
 [float] placeMaxX.comment = The maximal distance from ball to goal line to adjust goalie position
 [float] placeMinX.value = 200
