--- a/django/rhio/model/values.conf
+++ b/django/rhio/model/values.conf
@@ -1,5 +1,9 @@
 [bool] noIMU.value = 0
 [bool] noIMU.comment = Disable IMU pitch/roll use for all models
+[float] cameraModelAngularHeight.value = 53.5
+[float] cameraModelAngularHeight.comment = Camera Model parameter height angular aperture in degree
+[float] cameraModelAngularWidth.value = 68
+[float] cameraModelAngularWidth.comment = Camera Model parameter width angular aperture in degree
 [float] odometry_X_offset.value = 0.00865426
 [float] odometry_X_offset.comment = Odometry correction coef: X = coef*x + coef*y + coef*t + OFFSET
 [float] odometry_X_t.value = -0.136895
@@ -16,3 +20,5 @@
 [float] odometry_Y_x.comment = Odometry correction coef: Y = COEF*X + coef*Y + coef*t + offset
 [float] odometry_Y_y.value = 1.05423
 [float] odometry_Y_y.comment = Odometry correction coef: Y = coef*X + COEF*Y + coef*t + offset
+[str] modelType.value = sigmaban
+[str] modelType.comment = Loaded model type. sigmaban or grosban.
