--- a/django/rhio/ballStack/values.conf
+++ b/django/rhio/ballStack/values.conf
@@ -1,3 +1,5 @@
+[float] duplicateOnKick.value = 0
+[float] duplicateOnKick.comment = If enabled, old ball position is not removed
 [float] farBall.value = 3
 [float] farBall.comment = Distance where the ball is considered far
 [float] initialScore.value = 0.2
@@ -10,9 +12,9 @@
 [float] maximumScore.comment = Maximum score of an item
 [float] positionDiscount.value = 0.9
 [float] positionDiscount.comment = new = old * disc + seen * (1 - disc)
-[float] scoreIncrease.value = 0.5
+[float] scoreIncrease.value = 0.1
 [float] scoreIncrease.comment = Score increase
-[float] scoreReduction.value = 0.01
+[float] scoreReduction.value = 0.02
 [float] scoreReduction.comment = Score reduction at each frame
 [float] scoreReductionOut.value = 0.005
 [float] scoreReductionOut.comment = Score reduction at each frame where 
