--- a/fakeReborn/rhio/moves/walk/values.conf
+++ b/fakeReborn/rhio/moves/walk/values.conf
@@ -10,16 +10,30 @@
 [float] armsRoll.comment = 
 [float] compensateRoll.value = 0
 [float] compensateRoll.comment = 
+[float] cooldown.value = 0.6
+[float] cooldown.comment = Cooldown duration
 [float] footYOffset.value = 0.01
 [float] footYOffset.comment = Front Y offset
 [float] freq.value = 2
 [float] freq.comment = Walk frequency
+[float] kickDist.value = 4
+[float] kickDist.comment = Distance traveled by a classic kick [m]
+[float] lateralKickDist.value = 2
+[float] lateralKickDist.comment = Distance traveled by a lateral kick [m]
 [float] lateralTrim.value = 0
 [float] lateralTrim.comment = 
 [float] maxAcceleration.value = 20
 [float] maxAcceleration.comment = Maximum step acceleration
+[float] maxLateral.value = 20
+[float] maxLateral.comment = 
+[float] maxRotation.value = 20
+[float] maxRotation.comment = 
 [float] maxRotationAcceleration.value = 20
 [float] maxRotationAcceleration.comment = Maximum rotation acceleration
+[float] maxStep.value = 35
+[float] maxStep.comment = 
+[float] maxStepBackward.value = 20
+[float] maxStepBackward.comment = 
 [float] riseDownVel.value = 2
 [float] riseDownVel.comment = Rise down velocity
 [float] riseGain.value = 0.02
@@ -32,8 +46,6 @@
 [float] securityTreshold.comment = 
 [float] shootAfterPhase.value = 0.5
 [float] shootAfterPhase.comment = Shooting step
-[float] shootFreq.value = 1.2
-[float] shootFreq.comment = Shooting step
 [float] shootGain.value = 1
 [float] shootGain.comment = Shooting gain
 [float] shootPhase.value = 0.5
@@ -42,6 +54,8 @@
 [float] shootSpeed.comment = 
 [float] shootStep.value = 0
 [float] shootStep.comment = Shooting step
+[float] smallKickDist.value = 1
+[float] smallKickDist.comment = Distance traveled by a small kick [m]
 [float] smoothCommands.value = 0.9
 [float] smoothCommands.comment = Maximum step acceleration
 [float] smoothTransition.value = 0.97
@@ -82,3 +96,5 @@
 [float] trunkZOffset.comment = Trunk Z offset
 [float] turnTrim.value = 0
 [float] turnTrim.comment = 
+[float] warmup.value = 0.6
+[float] warmup.comment = Warmup
