Commit of chewbacca status

--- a/chewbacca/rhio/moves/goal_keeper/values.conf
+++ b/chewbacca/rhio/moves/goal_keeper/values.conf
@@ -4,6 +4,8 @@
 [float] placeMaxX.comment = The maximal distance from ball to goal line to adjust goalie position
 [float] placeMinX.value = 200
 [float] placeMinX.comment = The minimal distance from ball to goal line to adjust goalie position
+[float] targetSmoothing.value = 0.95
+[float] targetSmoothing.comment = Target smoothing
 [float] waitX.value = 30
 [float] waitX.comment = Distance to goal line in cm
 [float] xMargin.value = 0
