--- a/chewbacca/rhio/ballStack/values.conf
+++ b/chewbacca/rhio/ballStack/values.conf
@@ -1,4 +1,10 @@
-[float] farBall.value = 1.5
+[bool] addAllUnmatched.value = 0
+[bool] addAllUnmatched.comment = If enabled, all the provided positions which are not matched are used to create new candidates
+[bool] duplicateOnKick.value = 0
+[bool] duplicateOnKick.comment = If enabled, old ball position is not removed
+[bool] normalizeSum.value = 1
+[bool] normalizeSum.comment = If enabled, the sum of all elements can never be greater than 1
+[float] farBall.value = 4
 [float] farBall.comment = Distance where the ball is considered far
 [float] initialScore.value = 0.2
 [float] initialScore.comment = Score of a new item in the ball stack
