--- a/chewbacca/rhio/decision/values.conf
+++ b/chewbacca/rhio/decision/values.conf
@@ -1,3 +1,5 @@
+[bool] cooperation.value = 1
+[bool] cooperation.comment = Enabling the cooperation with team
 [bool] enableShare.value = 1
 [bool] enableShare.comment = 
 [float] ballQDisableThreshold.value = 0.3
