--- a/chewbacca/rhio/model/values.conf
+++ b/chewbacca/rhio/model/values.conf
@@ -1,18 +1,6 @@
+[bool] isReadVoltages.value = 0
+[bool] isReadVoltages.comment = Enable lowlevel control and power voltage read and log
 [bool] noIMU.value = 0
 [bool] noIMU.comment = Disable IMU pitch/roll use for all models
-[float] odometry_X_offset.value = -0.000579445
-[float] odometry_X_offset.comment = Odometry correction coef: X = coef*x + coef*y + coef*t + OFFSET
-[float] odometry_X_t.value = -0.053127
-[float] odometry_X_t.comment = Odometry correction coef: X = coef*x + coef*y + COEF*t + offset
-[float] odometry_X_x.value = 1.22233
-[float] odometry_X_x.comment = Odometry correction coef: X = COEF*x + coef*y + coef*t + offset
-[float] odometry_X_y.value = 0.178849
-[float] odometry_X_y.comment = Odometry correction coef: X = coef*x + COEF*y + coef*t + offset
-[float] odometry_Y_offset.value = -0.00289211
-[float] odometry_Y_offset.comment = Odometry correction coef: Y = coef*X + coef*Y + coef*t + OFFSET
-[float] odometry_Y_t.value = -0.0946058
-[float] odometry_Y_t.comment = Odometry correction coef: Y = coef*X + coef*Y + COEF*t + offset
-[float] odometry_Y_x.value = -0.029512
-[float] odometry_Y_x.comment = Odometry correction coef: Y = COEF*X + coef*Y + coef*t + offset
-[float] odometry_Y_y.value = 1.24373
-[float] odometry_Y_y.comment = Odometry correction coef: Y = coef*X + COEF*Y + coef*t + offset
+[str] modelType.value = sigmaban
+[str] modelType.comment = Loaded model type. sigmaban or grosban.
