--- a/chewbacca/rhio/teamplay/values.conf
+++ b/chewbacca/rhio/teamplay/values.conf
@@ -1,6 +1,10 @@
 [bool] enable.value = 1
 [bool] enable.comment = 
 [int] priority.value = 1
-[int] priority.comment = 0: low; 1: normal; 2: hight Priority
+[int] priority.comment = 0: low; 1: normal; 2: high Priority
 [float] broadcastPeriod.value = 0.3
 [float] broadcastPeriod.comment = UDP broadcast period in seconds
+[float] refereeRadius.value = 110
+[float] refereeRadius.comment = Additionnal radius to the teamRadius when referee asks to let play
+[float] teamRadius.value = 150
+[float] teamRadius.comment = 
