--- a/django/ptgrey_calib.yml
+++ b/django/ptgrey_calib.yml
@@ -1,16 +1,1 @@
-%YAML:1.0
-image_width: 640
-image_height: 480
-camera_matrix: !!opencv-matrix
-   rows: 3
-   cols: 3
-   dt: d
-   data: [ 5.0583189709674963e+02, 0., 3.2265163207387263e+02, 0.,
-       5.0836148044105624e+02, 2.2784590081932126e+02, 0., 0., 1. ]
-distortion_coefficients: !!opencv-matrix
-   rows: 1
-   cols: 5
-   dt: d
-   data: [ -1.0466399848358590e-01, 9.8083126486339101e-02,
-       -4.0113471855059936e-03, -1.4451233189033716e-03,
-       7.1496888964853317e-03 ]
+../common/ptgrey_calib.yml
