New structure for learned_approach config files

--- a/fakeReborn/rhio/moves/walk/values.conf
+++ b/fakeReborn/rhio/moves/walk/values.conf
@@ -22,15 +22,17 @@
 [float] lateralKickDist.comment = Distance traveled by a lateral kick [m]
 [float] lateralTrim.value = 0
 [float] lateralTrim.comment = 
-[float] maxAcceleration.value = 20
-[float] maxAcceleration.comment = Maximum step acceleration
+[float] maxDLatByCycle.value = 5
+[float] maxDLatByCycle.comment = For noSmoothing mode [mm]
+[float] maxDStepByCycle.value = 10
+[float] maxDStepByCycle.comment = For noSmoothing mode [mm]
+[float] maxDTurnByCycle.value = 2.5
+[float] maxDTurnByCycle.comment = For noSmoothing mode [deg]
 [float] maxLateral.value = 20
 [float] maxLateral.comment = 
 [float] maxRotation.value = 20
 [float] maxRotation.comment = 
-[float] maxRotationAcceleration.value = 15
-[float] maxRotationAcceleration.comment = Maximum rotation acceleration
-[float] maxStep.value = 35
+[float] maxStep.value = 50
 [float] maxStep.comment = 
 [float] maxStepBackward.value = 20
 [float] maxStepBackward.comment = 
