Updating rhio config for django

--- a/django/rhio/moves/robocup/values.conf
+++ b/django/rhio/moves/robocup/values.conf
@@ -1,24 +1,24 @@
-[bool] autoKickOff.value = 0
+[bool] autoKickOff.value = 1
 [bool] autoKickOff.comment = Are the kickOff performed autonomously?
-[bool] freeKicker.value = 0
+[bool] freeKicker.value = 1
 [bool] freeKicker.comment = Am I the free kicker performer?
 [bool] goalKeeper.value = 0
 [bool] goalKeeper.comment = Am I a goal keeper?
-[float] autoStartAzimuth.value = -90
+[float] autoStartAzimuth.value = 90
 [float] autoStartAzimuth.comment = Initial orientation of the robot during ready phase [cm]
-[float] autoStartX.value = -150
+[float] autoStartX.value = -75
 [float] autoStartX.comment = Start of the robot during ready phase [cm]
-[float] autoStartY.value = 300
+[float] autoStartY.value = -300
 [float] autoStartY.comment = Start of the robot during ready phase [cm]
-[float] autoTargetX.value = -150
+[float] autoTargetX.value = -125
 [float] autoTargetX.comment = Target of the robot during ready phase [cm]
 [float] autoTargetY.value = 0
 [float] autoTargetY.comment = Target of the robot during ready phase [cm]
-[float] delayStart.value = 3
+[float] delayStart.value = 0
 [float] delayStart.comment = Delay start
-[float] freeKickX.value = -50
+[float] freeKickX.value = -100
 [float] freeKickX.comment = Target of the robot performing freeKick during ready phase [cm]
 [float] freeKickY.value = 0
 [float] freeKickY.comment = Target of the robot performing freeKick during ready phase [cm]
-[float] lowPressureTreshold.value = 600000
-[float] lowPressureTreshold.comment = Low pressure to detect robot handling
+[str] headMove.value = Head2
+[str] headMove.comment = Head move to run
