--- a/django/rhio/ballStack/values.conf
+++ b/django/rhio/ballStack/values.conf
@@ -1,20 +1,24 @@
-[float] duplicateOnKick.value = 0
-[float] duplicateOnKick.comment = If enabled, old ball position is not removed
-[float] farBall.value = 3
+[bool] addAllUnmatched.value = 0
+[bool] addAllUnmatched.comment = If enabled, all the provided positions which are not matched are used to create new candidates
+[bool] duplicateOnKick.value = 0
+[bool] duplicateOnKick.comment = If enabled, old ball position is not removed
+[bool] normalizeSum.value = 1
+[bool] normalizeSum.comment = If enabled, the sum of all elements can never be greater than 1
+[float] farBall.value = 4
 [float] farBall.comment = Distance where the ball is considered far
 [float] initialScore.value = 0.2
 [float] initialScore.comment = Score of a new item in the ball stack
-[float] matchAngle.value = 10
-[float] matchAngle.comment = Angle at which we match balls [deg]
+[float] matchAnglle.value = 5
+[float] matchAnglle.comment = Angle at which we match balls [deg]
 [float] matchDistance.value = 0.2
 [float] matchDistance.comment = Radius to match the same ball
 [float] maximumScore.value = 1
 [float] maximumScore.comment = Maximum score of an item
 [float] positionDiscount.value = 0.9
 [float] positionDiscount.comment = new = old * disc + seen * (1 - disc)
-[float] scoreIncrease.value = 0.1
+[float] scoreIncrease.value = 0.3
 [float] scoreIncrease.comment = Score increase
-[float] scoreReduction.value = 0.02
+[float] scoreReduction.value = 0.1
 [float] scoreReduction.comment = Score reduction at each frame
-[float] scoreReductionOut.value = 0.005
+[float] scoreReductionOut.value = 0.01
 [float] scoreReductionOut.comment = Score reduction at each frame where 
