--- a/django/rhio/moves/head/values.conf
+++ b/django/rhio/moves/head/values.conf
@@ -1,14 +1,16 @@
 [int] framesPerPos.value = 2
 [int] framesPerPos.comment = Frames per position
-[int] scanPanNbPos.value = 6
+[int] scanPanNbPos.value = 8
 [int] scanPanNbPos.comment = Number of different positions for scan in Pan
-[int] scanTiltNbPos.value = 2
+[int] scanTiltNbPos.value = 3
 [int] scanTiltNbPos.comment = Number of different positions for scan in Tilt
+[float] goalTilt.value = 0
+[float] goalTilt.comment = Offset for scanning the goal
 [float] maxPan.value = 90
 [float] maxPan.comment = Maximum pan of image center
-[float] maxTilt.value = 55
+[float] maxTilt.value = 70
 [float] maxTilt.comment = Maximum tilt of image center
-[float] minTilt.value = 20
+[float] minTilt.value = 10
 [float] minTilt.comment = Minimum tilt of image center
 [float] movingCool.value = 0.06
 [float] movingCool.comment = Moving cool delay
