--- a/django/rhio/moves/walk/values.conf
+++ b/django/rhio/moves/walk/values.conf
@@ -2,24 +2,40 @@
 [float] P_stepPitch.comment = P factor on trunkPitch related to step
 [float] P_stepPitch_back.value = 0
 [float] P_stepPitch_back.comment = P factor on trunkPitch related to step (backward)
-[float] P_stepXOffset.value = 0
+[float] P_stepXOffset.value = 0.0005
 [float] P_stepXOffset.comment = P factor on trunkXOffset related to step
-[float] P_stepXOffset_back.value = 0
+[float] P_stepXOffset_back.value = 0.0002
 [float] P_stepXOffset_back.comment = P factor on trunkXOffset related to step (backward)
 [float] armsRoll.value = 18
 [float] armsRoll.comment = 
 [float] compensateRoll.value = -3.6
 [float] compensateRoll.comment = 
+[float] cooldown.value = 1.5
+[float] cooldown.comment = Cooldown duration
 [float] footYOffset.value = 0.025
 [float] footYOffset.comment = Front Y offset
 [float] freq.value = 1.7
 [float] freq.comment = Walk frequency
+[float] kickDist.value = 2
+[float] kickDist.comment = Distance traveled by a classic kick [m]
+[float] lateralKickDist.value = 1
+[float] lateralKickDist.comment = Distance traveled by a lateral kick [m]
 [float] lateralTrim.value = 0
 [float] lateralTrim.comment = 
-[float] maxAcceleration.value = 20
-[float] maxAcceleration.comment = Maximum step acceleration
-[float] maxRotationAcceleration.value = 20
-[float] maxRotationAcceleration.comment = Maximum rotation acceleration
+[float] maxDLatByCycle.value = 5
+[float] maxDLatByCycle.comment = For noSmoothing mode [mm]
+[float] maxDStepByCycle.value = 10
+[float] maxDStepByCycle.comment = For noSmoothing mode [mm]
+[float] maxDTurnByCycle.value = 2.5
+[float] maxDTurnByCycle.comment = For noSmoothing mode [deg]
+[float] maxLateral.value = 20
+[float] maxLateral.comment = 
+[float] maxRotation.value = 15
+[float] maxRotation.comment = 
+[float] maxStep.value = 50
+[float] maxStep.comment = 
+[float] maxStepBackward.value = 20
+[float] maxStepBackward.comment = 
 [float] riseDownVel.value = 5
 [float] riseDownVel.comment = Rise down velocity
 [float] riseGain.value = 0.035
@@ -30,10 +46,8 @@
 [float] securityPhase.comment = 
 [float] securityTreshold.value = 0.06
 [float] securityTreshold.comment = 
-[float] shootAfterPhase.value = 0.5
+[float] shootAfterPhase.value = 0
 [float] shootAfterPhase.comment = Shooting step
-[float] shootFreq.value = 0.9
-[float] shootFreq.comment = Shooting step
 [float] shootGain.value = 1
 [float] shootGain.comment = Shooting gain
 [float] shootPhase.value = 0.2
@@ -42,9 +56,11 @@
 [float] shootSpeed.comment = 
 [float] shootStep.value = 0
 [float] shootStep.comment = Shooting step
+[float] smallKickDist.value = 1
+[float] smallKickDist.comment = Distance traveled by a small kick [m]
 [float] smoothCommands.value = 0.9
 [float] smoothCommands.comment = Maximum step acceleration
-[float] smoothTransition.value = 0.97
+[float] smoothTransition.value = 0.5
 [float] smoothTransition.comment = Smoothing factor when changing parameters
 [float] startPhase.value = 0.25
 [float] startPhase.comment = Start phase
@@ -60,25 +76,27 @@
 [float] swingGain.comment = Swing gain
 [float] swingPause.value = 0
 [float] swingPause.comment = Swing pause
-[float] swingPhase.value = 0.25
+[float] swingPhase.value = 0.3
 [float] swingPhase.comment = Swing phase
 [float] swingRollGain.value = 0
 [float] swingRollGain.comment = Swing roll gain
 [float] swingVel.value = 4
 [float] swingVel.comment = Swing velocity
-[float] trunkPitch_backward.value = 9
+[float] trunkPitch_backward.value = 11
 [float] trunkPitch_backward.comment = Trunk Pitch
-[float] trunkPitch_forward.value = 11.8
+[float] trunkPitch_forward.value = 11
 [float] trunkPitch_forward.comment = Trunk Pitch
 [float] trunkRoll.value = 0
 [float] trunkRoll.comment = Roll of the trunk
-[float] trunkXOffset_backward.value = 0.01
+[float] trunkXOffset_backward.value = 0
 [float] trunkXOffset_backward.comment = Trunk X offset
-[float] trunkXOffset_forward.value = 0.018
+[float] trunkXOffset_forward.value = 0
 [float] trunkXOffset_forward.comment = Trunk X offset
 [float] trunkYOffset.value = 0
 [float] trunkYOffset.comment = Trunk Y offset
 [float] trunkZOffset.value = 0.02
 [float] trunkZOffset.comment = Trunk Z offset
-[float] turnTrim.value = 0
+[float] turnTrim.value = -1
 [float] turnTrim.comment = 
+[float] warmup.value = 0.6
+[float] warmup.comment = Warmup
