--- a/django/rhio/moves/approach_potential/values.conf
+++ b/django/rhio/moves/approach_potential/values.conf
@@ -10,7 +10,9 @@
 [float] rotationP.comment = 
 [float] stepP.value = 1
 [float] stepP.comment = 
-[float] targetX.value = 0.1
+[float] stepPunch.value = 10
+[float] stepPunch.comment = 
+[float] targetX.value = 0.11
 [float] targetX.comment = 
 [float] targetY.value = 0.06
 [float] targetY.comment = 
