--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0"?>
 <package>
+    <!--
+         Do not delete this file, it is required to get workspace pulling
+         the repository
+    -->
   <name>env</name>
   <version>0.0.0</version>
   <description>
