--- a/django/rhio/Localisation/Field/TagsObservation/values.conf
+++ b/django/rhio/Localisation/Field/TagsObservation/values.conf
@@ -6,5 +6,7 @@
 [float] angleMaxErr.comment = [deg] From which angle error the angleScore is pError
 [float] distFactor.value = 0.5
 [float] distFactor.comment = [m] The position difference at which disScore is 0.5
-[float] normFactor.value = 0.5
-[float] normFactor.comment = [m] The norm difference at which normScore is epsilon
+[float] normFlatTol.value = 0.05
+[float] normFlatTol.comment = [m] Until which norm error the normScore is 1
+[float] normMaxErr.value = 0.5
+[float] normMaxErr.comment = [m] From which norm error the normScore is pError
