--- a/django/rhio/Localisation/Field/values.conf
+++ b/django/rhio/Localisation/Field/values.conf
@@ -1,2 +1,6 @@
 [int] nbParticles.value = 3000
 [int] nbParticles.comment = Number of particles in the localisation filter
+[float] maxNoiseBoost.value = 1
+[float] maxNoiseBoost.comment = Maximal multiplier for exploration in boost mode
+[float] noiseBoostDuration.value = 15
+[float] noiseBoostDuration.comment = Maximal multiplier for exploration in boost mode
