--- a/tom/rhio/Localisation/Field/GoalObservation/values.conf
+++ b/tom/rhio/Localisation/Field/GoalObservation/values.conf
@@ -8,3 +8,5 @@
 [float] sigmoidLambda.comment = Cf. sigmoidOffset
 [float] sigmoidOffset.value = 0.6
 [float] sigmoidOffset.comment = The value at which dScore/dx is lambda, with dx = dAngle/maxAngle
+[float] similarAngleLimit.value = 5
+[float] similarAngleLimit.comment = Maximal angular difference for similar observations [deg]
