--- a/tom/rhio/moves/Head2/values.conf
+++ b/tom/rhio/moves/Head2/values.conf
@@ -1,3 +1,7 @@
+[float] fallBackwardPitch.value = 80
+[float] fallBackwardPitch.comment = Head pitch goal value during backward falls [deg]
+[float] fallForwardPitch.value = -45
+[float] fallForwardPitch.comment = Head pitch goal value during forward falls [deg]
 [float] forceTrackDist.value = 0.75
 [float] forceTrackDist.comment = Distance to force watching the ball
 [float] localizeMaxPan.value = 135
