--- a/tom/rhio/moves/head/values.conf
+++ b/tom/rhio/moves/head/values.conf
@@ -4,6 +4,8 @@
 [int] scanPanNbPos.comment = Number of different positions for scan in Pan
 [int] scanTiltNbPos.value = 3
 [int] scanTiltNbPos.comment = Number of different positions for scan in Tilt
+[float] goalTilt.value = 0
+[float] goalTilt.comment = Offset for scanning the goal
 [float] maxPan.value = 90
 [float] maxPan.comment = Maximum pan of image center
 [float] maxTilt.value = 70
