--- a/tom/rhio/moves/learned_approach/values.conf
+++ b/tom/rhio/moves/learned_approach/values.conf
@@ -6,7 +6,15 @@
 [float] no_kick_gain.comment = DecreaseRate when ball is not kickable (score decreases by elapsed * no_kick_gain)
 [float] warm_up_time.value = 1
 [float] warm_up_time.comment = How many seconds before kicking once walk has been disabled
-[str] policy_file.value = LearnedApproachPolicy.xml
-[str] policy_file.comment = 
-[str] problem_file.value = LearnedApproachProblem.xml
-[str] problem_file.comment = 
+[str] classic_policy_file.value = learned_approach/classic/policy.xml
+[str] classic_policy_file.comment = 
+[str] classic_problem_file.value = learned_approach/classic/problem.xml
+[str] classic_problem_file.comment = 
+[str] lateral_policy_file.value = learned_approach/lateral/policy.xml
+[str] lateral_policy_file.comment = 
+[str] lateral_problem_file.value = learned_approach/lateral/problem.xml
+[str] lateral_problem_file.comment = 
+[str] small_policy_file.value = learned_approach/small/policy.xml
+[str] small_policy_file.comment = 
+[str] small_problem_file.value = learned_approach/small/problem.xml
+[str] small_problem_file.comment = 
