--- a/tom/rhio/moves/placer/values.conf
+++ b/tom/rhio/moves/placer/values.conf
@@ -10,14 +10,8 @@
 [float] marginX.comment = 
 [float] marginY.value = 50
 [float] marginY.comment = 
-[float] maxBwdStep.value = 20
-[float] maxBwdStep.comment = 
-[float] maxFwdStep.value = 40
-[float] maxFwdStep.comment = 
-[float] maxLateral.value = 10
-[float] maxLateral.comment = 
-[float] maxTurn.value = 10
-[float] maxTurn.comment = 
+[float] pathTargetDist.value = 80
+[float] pathTargetDist.comment = 
 [float] rushHysteresisHigh.value = 30
 [float] rushHysteresisHigh.comment = Rush stop being allowed above this threshold
 [float] rushHysteresisLow.value = 20
