--- a/tom/rhio/moves/robocup/values.conf
+++ b/tom/rhio/moves/robocup/values.conf
@@ -20,5 +20,5 @@
 [float] freeKickX.comment = Target of the robot performing freeKick during ready phase [cm]
 [float] freeKickY.value = 0
 [float] freeKickY.comment = Target of the robot performing freeKick during ready phase [cm]
-[float] lowPressureTreshold.value = 600000
-[float] lowPressureTreshold.comment = Low pressure to detect robot handling
+[str] headMove.value = Head2
+[str] headMove.comment = Head move to run
