--- a/tom/rhio/moves/learned_approach/values.conf
+++ b/tom/rhio/moves/learned_approach/values.conf
@@ -14,6 +14,10 @@
 [str] lateral_policy_file.comment = 
 [str] lateral_problem_file.value = learned_approach/lateral/problem.xml
 [str] lateral_problem_file.comment = 
+[str] opportunist_policy_file.value = learned_approach/opportunist/policy.xml
+[str] opportunist_policy_file.comment = 
+[str] opportunist_problem_file.value = learned_approach/opportunist/problem.xml
+[str] opportunist_problem_file.comment = 
 [str] small_policy_file.value = learned_approach/small/policy.xml
 [str] small_policy_file.comment = 
 [str] small_problem_file.value = learned_approach/small/problem.xml
