--- a/chewbacca/rhio/moves/approach_potential/values.conf
+++ b/chewbacca/rhio/moves/approach_potential/values.conf
@@ -1,3 +1,5 @@
+[bool] enableLateral.value = 1
+[bool] enableLateral.comment = Enable the lateral kicks
 [float] angleThreshold.value = 9
 [float] angleThreshold.comment = 
 [float] degsPerMeter.value = 200
@@ -8,6 +10,8 @@
 [float] rotationP.comment = 
 [float] stepP.value = 1
 [float] stepP.comment = 
+[float] stepPunch.value = 0
+[float] stepPunch.comment = 
 [float] targetX.value = 0.1
 [float] targetX.comment = 
 [float] targetY.value = 0.08
