--- a/chewbacca/rhio/moves/Head2/values.conf
+++ b/chewbacca/rhio/moves/Head2/values.conf
@@ -1,3 +1,17 @@
+[float] fallBackwardPitch.value = 80
+[float] fallBackwardPitch.comment = Head pitch goal value during backward falls [deg]
+[float] fallForwardPitch.value = -45
+[float] fallForwardPitch.comment = Head pitch goal value during forward falls [deg]
+[float] forceTrackDist.value = 0.75
+[float] forceTrackDist.comment = Distance to force watching the ball
+[float] localizeMaxPan.value = 135
+[float] localizeMaxPan.comment = Maximum pan wished for an image point
+[float] localizeMaxTilt.value = 60
+[float] localizeMaxTilt.comment = Maximum tilt wished for an image point
+[float] localizeMinOverlap.value = 5
+[float] localizeMinOverlap.comment = Minimal overlap between control points [degrees]
+[float] localizeMinTilt.value = -8
+[float] localizeMinTilt.comment = Minimum tilt wished for an image point
 [float] maxAcc.value = 3600
 [float] maxAcc.comment = Maximal acceleration [deg/s^2]
 [float] maxPan.value = 90
@@ -14,5 +28,7 @@
 [float] minTilt.comment = Minimum tilt wished for an image point
 [float] scanExtraPeriod.value = 0.5
 [float] scanExtraPeriod.comment = Extra time to ensure we are looking everywhere [s]
+[float] smoothing.value = 0.9
+[float] smoothing.comment = smoothing of the orders applied for both scan and track
 [float] trackingPeriod.value = 5
 [float] trackingPeriod.comment = Duration of scan cycle [s]
