--- a/chewbacca/rhio/moves/walk/values.conf
+++ b/chewbacca/rhio/moves/walk/values.conf
@@ -16,20 +16,18 @@
 [float] footYOffset.comment = Front Y offset
 [float] freq.value = 1.6
 [float] freq.comment = Walk frequency
-[float] kickDist.value = 2
-[float] kickDist.comment = Distance traveled by a classic kick [m]
-[float] lateralKickDist.value = 1
-[float] lateralKickDist.comment = Distance traveled by a lateral kick [m]
 [float] lateralTrim.value = 0
 [float] lateralTrim.comment = 
-[float] maxAcceleration.value = 30
-[float] maxAcceleration.comment = Maximum step acceleration
+[float] maxDLatByCycle.value = 5
+[float] maxDLatByCycle.comment = For noSmoothing mode [mm]
+[float] maxDStepByCycle.value = 10
+[float] maxDStepByCycle.comment = For noSmoothing mode [mm]
+[float] maxDTurnByCycle.value = 2.5
+[float] maxDTurnByCycle.comment = For noSmoothing mode [deg]
 [float] maxLateral.value = 20
 [float] maxLateral.comment = 
 [float] maxRotation.value = 20
 [float] maxRotation.comment = 
-[float] maxRotationAcceleration.value = 30
-[float] maxRotationAcceleration.comment = Maximum rotation acceleration
 [float] maxStep.value = 40
 [float] maxStep.comment = 
 [float] maxStepBackward.value = 20
@@ -46,21 +44,13 @@
 [float] securityTreshold.comment = 
 [float] shootAfterPhase.value = 0.25
 [float] shootAfterPhase.comment = Shooting step
-[float] shootGain.value = 1
-[float] shootGain.comment = Shooting gain
 [float] shootPhase.value = 0
 [float] shootPhase.comment = Shooting step
-[float] shootSpeed.value = 4
-[float] shootSpeed.comment = 
-[float] shootStep.value = 0
-[float] shootStep.comment = Shooting step
-[float] smallKickDist.value = 1
-[float] smallKickDist.comment = Distance traveled by a small kick [m]
 [float] smoothCommands.value = 0.9
 [float] smoothCommands.comment = Maximum step acceleration
-[float] smoothTransition.value = 0.97
+[float] smoothTransition.value = 0.5
 [float] smoothTransition.comment = Smoothing factor when changing parameters
-[float] startPhase.value = 0.2
+[float] startPhase.value = 0
 [float] startPhase.comment = Start phase
 [float] stepDownVel.value = 5
 [float] stepDownVel.comment = Step down velocity
@@ -96,5 +86,5 @@
 [float] trunkZOffset.comment = Trunk Z offset
 [float] turnTrim.value = 0
 [float] turnTrim.comment = 
-[float] warmup.value = 0.6
+[float] warmup.value = 1
 [float] warmup.comment = Warmup
