--- a/django/rhio/teamplay/values.conf
+++ b/django/rhio/teamplay/values.conf
@@ -8,3 +8,5 @@
 [float] refereeExtraRadius.comment = Additionnal radius to the teamRadius when referee asks to let play
 [float] teamRadius.value = 100
 [float] teamRadius.comment = 
+[float] aggressivity.value = 0.75
+[float] aggressivity.comment = Is the placing aggressive ore defensive?
