--- a/chewbacca/rhio/teamplay/values.conf
+++ b/chewbacca/rhio/teamplay/values.conf
@@ -8,3 +8,5 @@
 [float] refereeRadius.comment = Additionnal radius to the teamRadius when referee asks to let play
 [float] teamRadius.value = 150
 [float] teamRadius.comment = 
+[float] aggressivity.value = 0.75
+[float] aggressivity.comment = Is the placing aggressive ore defensive?
