--- a/tom/rhio/moves/head/values.conf
+++ b/tom/rhio/moves/head/values.conf
@@ -4,6 +4,10 @@
 [float] fallForwardPitch.comment = Head pitch goal value during forward falls [deg]
 [float] forceTrackDist.value = 0.75
 [float] forceTrackDist.comment = Distance to force watching the ball
+[float] handleMaxPan.value = 110
+[float] handleMaxPan.comment = Maximum pan before we reach the handle
+[float] handleMinTilt.value = 40
+[float] handleMinTilt.comment = Minimum tilt value when the pan is reached
 [float] localizeMaxPan.value = 135
 [float] localizeMaxPan.comment = Maximum pan wished for an image point
 [float] localizeMaxTilt.value = 60
