Olive walk security arms

--- a/olive/rhio/moves/walk/values.conf
+++ b/olive/rhio/moves/walk/values.conf
@@ -6,12 +6,16 @@
 [float] P_stepXOffset.comment = P factor on trunkXOffset related to step
 [float] P_stepXOffset_back.value = 0.0005
 [float] P_stepXOffset_back.comment = P factor on trunkXOffset related to step (backward)
-[float] armsRoll.value = 18
+[float] armsPitch.value = 0
+[float] armsPitch.comment = 
+[float] armsRoll.value = -8
 [float] armsRoll.comment = 
 [float] compensateRoll.value = -3.6
 [float] compensateRoll.comment = 
 [float] cooldown.value = 1
 [float] cooldown.comment = Cooldown duration
+[float] elbowOffset.value = -175
+[float] elbowOffset.comment = 
 [float] footYOffset.value = 0.03
 [float] footYOffset.comment = Front Y offset
 [float] freq.value = 1.55
