--- a/chewbacca/rhio/ballStack/values.conf
+++ b/chewbacca/rhio/ballStack/values.conf
@@ -1,17 +1,15 @@
-[bool] addAllUnmatched.value = 0
-[bool] addAllUnmatched.comment = If enabled, all the provided positions which are not matched are used to create new candidates
-[bool] duplicateOnKick.value = 0
-[bool] duplicateOnKick.comment = If enabled, old ball position is not removed
 [bool] normalizeSum.value = 1
 [bool] normalizeSum.comment = If enabled, the sum of all elements can never be greater than 1
-[float] farBall.value = 4
-[float] farBall.comment = Distance where the ball is considered far
+[float] afterKickPermissiveDuration.value = 3
+[float] afterKickPermissiveDuration.comment = Duration (s) of permissive merge after kick
+[float] far.value = 4
+[float] far.comment = Distance where the object is considered far
 [float] initialScore.value = 0.2
-[float] initialScore.comment = Score of a new item in the ball stack
+[float] initialScore.comment = Score of a new item
 [float] matchAngle.value = 5
-[float] matchAngle.comment = Angle at which we match balls [deg]
+[float] matchAngle.comment = Angle at which we match objects [deg]
 [float] matchDistance.value = 0.4
-[float] matchDistance.comment = Radius to match the same ball
+[float] matchDistance.comment = Radius to match the same object
 [float] maximumScore.value = 1
 [float] maximumScore.comment = Maximum score of an item
 [float] positionDiscount.value = 0.7
