--- a/chewbacca/rhio/moves/learned_approach/values.conf
+++ b/chewbacca/rhio/moves/learned_approach/values.conf
@@ -1,9 +1,9 @@
 [bool] doKick.value = 1
 [bool] doKick.comment = Start a kick when the approach is finish
-[float] kick_gain.value = 1
-[float] kick_gain.comment = IncreaseRate when ball is kickable (score increases by elapsed * kick_gain)
-[float] no_kick_gain.value = 0.5
-[float] no_kick_gain.comment = DecreaseRate when ball is not kickable (score decreases by elapsed * no_kick_gain)
+[float] kickGain.value = 1
+[float] kickGain.comment = IncreaseRate when ball is kickable (score increases by elapsed * kick_gain)
+[float] noKickGain.value = 0.5
+[float] noKickGain.comment = DecreaseRate when ball is not kickable (score decreases by elapsed * no_kick_gain)
 [float] warm_up_time.value = 1
 [float] warm_up_time.comment = How many seconds before kicking once walk has been disabled
 [str] classic_policy_file.value = learned_approach/classic/policy.xml
