--- a/chewbacca/rhio/moves/placer/values.conf
+++ b/chewbacca/rhio/moves/placer/values.conf
@@ -1,3 +1,5 @@
+[bool] avoidOpponents.value = 1
+[bool] avoidOpponents.comment = Avoid the opponents?
 [bool] directMode.value = 1
 [bool] directMode.comment = Turning to target before walking target
 [float] hysteresis.value = 1.5
