--- a/chewbacca/rhio/moves/playing/values.conf
+++ b/chewbacca/rhio/moves/playing/values.conf
@@ -6,7 +6,9 @@
 [float] avoidRadius.comment = Radius (cm) to avoid colliding the ball while placing
 [float] localizeWalkDuration.value = 10
 [float] localizeWalkDuration.comment = Walk forward during this duration
+[float] perpendicularBallDistance.value = 80
+[float] perpendicularBallDistance.comment = Distance (cm) on the perpendicular to attack placement
 [float] placingBallDistance.value = 200
-[float] placingBallDistance.comment = Distance (cm) to the ball for placement
-[str] approachMove.value = approach_potential
-[str] approachMove.comment = Approach move to use
+[float] placingBallDistance.comment = Distance (cm) to the ball for team play placement
+[float] walkBallDistance.value = 120
+[float] walkBallDistance.comment = Distance to run the approach to the ball
