--- a/chewbacca/rhio/moves/approach_potential/values.conf
+++ b/chewbacca/rhio/moves/approach_potential/values.conf
@@ -6,6 +6,10 @@
 [float] degsPerMeter.comment = 
 [float] distanceThreshold.value = 0.07
 [float] distanceThreshold.comment = 
+[float] kickGain.value = 1
+[float] kickGain.comment = IncreaseRate when ball is kickable (score increases by elapsed * kick_gain)
+[float] noKickGain.value = 0.5
+[float] noKickGain.comment = DecreaseRate when ball is not kickable (score decreases by elapsed * no_kick_gain)
 [float] rotationP.value = 10
 [float] rotationP.comment = 
 [float] stepP.value = 1
